--- a/labs-ios-starter/AppLifecycle/Base.lproj/LaunchScreen.storyboard
+++ b/labs-ios-starter/AppLifecycle/Base.lproj/LaunchScreen.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -18,16 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CitySpireLogo-Light" translatesAutoresizingMaskIntoConstraints="NO" id="brr-Fs-cXs">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <rect key="frame" x="90" y="385" width="234" height="66"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="DarkBlue"/>
                         <constraints>
-                            <constraint firstItem="brr-Fs-cXs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Gbg-S2-Jwy"/>
-                            <constraint firstItem="brr-Fs-cXs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="UTG-Wb-8zD"/>
+                            <constraint firstItem="brr-Fs-cXs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-30" id="Gbg-S2-Jwy"/>
                             <constraint firstItem="brr-Fs-cXs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cGL-Ph-qJd"/>
-                            <constraint firstItem="brr-Fs-cXs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="340" id="omG-Gr-G2H"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,7 +36,7 @@
     <resources>
         <image name="CitySpireLogo-Light" width="234" height="66"/>
         <namedColor name="DarkBlue">
-            <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.062745098039215685" green="0.27058823529411763" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
