Documentation in models, controllers, and helpers; minor bug fixes

--- a/labs-ios-starter/Favorites/Favorites.storyboard
+++ b/labs-ios-starter/Favorites/Favorites.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fhG-KI-gxj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -36,11 +35,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5Ce-gk-cqj">
-                                <rect key="frame" x="37" y="386" width="340" height="430"/>
+                                <rect key="frame" x="0.0" y="386" width="414" height="430"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="340" id="pqB-dA-0pG"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" id="N8d-Jz-nGY">
                                     <size key="itemSize" width="320" height="80"/>
                                     <size key="estimatedItemSize" width="320" height="80"/>
@@ -50,7 +46,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="favoriteCell" id="OGm-WF-5ID" customClass="FavoritesCollectionViewCell" customModule="labs_ios_starter" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="0.0" width="320" height="80"/>
+                                        <rect key="frame" x="47" y="0.0" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bSG-nU-HTw">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
@@ -176,6 +172,7 @@
                             <constraint firstItem="pnn-GI-Lwu" firstAttribute="top" secondItem="5Ce-gk-cqj" secondAttribute="bottom" id="8No-MO-rdz"/>
                             <constraint firstItem="20Q-gm-Sg9" firstAttribute="bottom" secondItem="QQl-TB-J6x" secondAttribute="bottom" constant="-20" id="EAH-cG-J3c"/>
                             <constraint firstItem="5Ce-gk-cqj" firstAttribute="centerX" secondItem="6Pg-Lc-WNU" secondAttribute="centerX" id="F7i-rc-Vf1"/>
+                            <constraint firstItem="AhX-OJ-OTO" firstAttribute="trailing" secondItem="5Ce-gk-cqj" secondAttribute="trailing" id="HAl-X1-0Rs"/>
                             <constraint firstItem="GNU-Pl-dU8" firstAttribute="leading" secondItem="AhX-OJ-OTO" secondAttribute="leading" id="O53-KU-pzM"/>
                             <constraint firstItem="AhX-OJ-OTO" firstAttribute="trailing" secondItem="GNU-Pl-dU8" secondAttribute="trailing" id="OVT-SH-DnE"/>
                             <constraint firstItem="xf7-xf-J7e" firstAttribute="height" secondItem="atX-ce-iZz" secondAttribute="height" constant="10" id="P8B-ej-cgY"/>
@@ -183,6 +180,7 @@
                             <constraint firstItem="atX-ce-iZz" firstAttribute="trailing" secondItem="AhX-OJ-OTO" secondAttribute="trailing" constant="-20" id="Ver-de-SqX"/>
                             <constraint firstItem="atX-ce-iZz" firstAttribute="height" secondItem="6Pg-Lc-WNU" secondAttribute="height" multiplier="0.25" id="a59-Gv-ONc"/>
                             <constraint firstItem="atX-ce-iZz" firstAttribute="top" secondItem="QQl-TB-J6x" secondAttribute="bottom" constant="20" id="a6W-4a-FYY"/>
+                            <constraint firstItem="5Ce-gk-cqj" firstAttribute="leading" secondItem="AhX-OJ-OTO" secondAttribute="leading" id="bpb-qP-nwn"/>
                             <constraint firstItem="xf7-xf-J7e" firstAttribute="centerX" secondItem="atX-ce-iZz" secondAttribute="centerX" id="byD-7o-sBn"/>
                             <constraint firstItem="pnn-GI-Lwu" firstAttribute="leading" secondItem="AhX-OJ-OTO" secondAttribute="leading" id="dBW-2k-two"/>
                             <constraint firstItem="5Ce-gk-cqj" firstAttribute="top" secondItem="atX-ce-iZz" secondAttribute="bottom" constant="20" id="e2P-zL-hda"/>
@@ -224,22 +222,22 @@
         <image name="pin.fill" catalog="system" width="119" height="128"/>
         <image name="pin.slash.fill" catalog="system" width="116" height="128"/>
         <namedColor name="AccentGreen">
-            <color red="0.29019607843137252" green="0.47843137254901957" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.28999999165534973" green="0.4779999852180481" blue="0.54900002479553223" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkBlue">
             <color red="0.062745098039215685" green="0.27058823529411763" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkishBlue">
-            <color red="0.19215686274509802" green="0.40000000000000002" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19200000166893005" green="0.40000000596046448" blue="0.56099998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="MedBlue">
-            <color red="0.058823529411764705" green="0.37254901960784315" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.059000000357627869" green="0.37299999594688416" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="OffWhite">
-            <color red="0.96470588235294119" green="0.95686274509803915" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.9649999737739563" green="0.9570000171661377" blue="0.95300000905990601" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="VeryLightBlue">
-            <color red="0.792156862745098" green="0.85882352941176465" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.79199999570846558" green="0.85900002717971802" blue="0.88999998569488525" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
